<resources>
    <string name="app_name">LoginApp</string>

    <string name="pass">Mot de passe</string>
    <string name="connect">S\'authentifier</string>
    <string name="id">Identifiant</string>
    <string name="continuer">Suivant</string>
    <string name="relative">RelativeLayout</string>
    <string name="quiz">Quizz</string>
    <string name="valide">Valider</string>
    <string name="j1">Joueur 1</string>
    <string name="j2">Joueur 2</string>
    <string name="accueil">Accueil</string>

</resources>