<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16sp"
        android:layout_marginEnd="16sp">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        app:icon="@drawable/ic_outline_table_chart_24"
        android:text="@string/relative"
        android:textAllCaps="false"
        android:layout_below="@id/text"
        android:layout_alignParentRight="true"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:orientation="horizontal"
        android:layout_below="@id/buttonNext"
        android:layout_alignParentRight="true">

        <RadioButton
            android:id="@+id/radioJ1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/j1"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioJ2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/j2"/>

    </RadioGroup>

    <Button
        android:id="@+id/buttonQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_outline_quiz_24"
        android:text="@string/quiz"
        android:textAllCaps="false"
        android:layout_below="@id/radioGroup"
        android:layout_alignParentRight="true"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>